Fixes to html escaping and whitespace so ascii displays correctly

--- a/assessment_3/displays/displays/client/styles/AsciiDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/AsciiDisplay.scss
@@ -13,6 +13,7 @@
   }
 
   &_MainFace {
+    white-space: pre;
     width: auto;
     margin: auto;
   }
@@ -25,6 +26,7 @@
   }
 
   &_SmallFace {
+    white-space: pre;
     @extend .u--color-green;
     margin: 0 auto;
     justify-content: space-around;
